Did ca6 dropdown

--- a/main/html/content-areas/CA6 - Data/subtopic/6.10-data-models/6.10-data-models.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.10-data-models/6.10-data-models.html
@@ -21,7 +21,10 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#6.10.1">6.10.1 - Know the types of data models and understand how they organise data into structures</option>
+            <option value="#6.10.2">6.10.2 - Understand the purpose of data models and when they are used</option>
+            <option value="#6.10.3">6.10.3 - Understand the benefits and drawbacks of data models based on:</option>
+            <option value="#6.10.4">6.10.4 - Understand the interrelationships between data models, data structures and data transformation and make judgements about the suitability of using data models in digital software development</option>
         </select>
         <br>
         <input type="submit" value="Submit">
@@ -30,7 +33,7 @@
     <main>
         <h2 class="heading">Subtopic 6.10: Data Models</h2>
 
-        <h3 class="sub-heading">6.10.1 Know the types of data models and understand how they organise data into structures</h3>
+        <h3 class="top-sub-heading" id="6.10.1">6.10.1 Know the types of data models and understand how they organise data into structures</h3>
 
         <h4>Hierarchical Data Model</h4>
         <ul>
@@ -79,7 +82,7 @@
             <p><strong>Characteristics:</strong> Easy to query with SQL, handles complex data efficiently, flexible and widely used.</p>
         </ul>
 
-        <h3 class="sub-heading">6.10.2 Know and understand the factors that impact the selection of data models for organising data</h3>
+        <h3 class="sub-heading" id="6.10.2">6.10.2 Know and understand the factors that impact the selection of data models for organising data</h3>
 
         <ul>
             <p><strong>Efficiency of accessing individual items of data:</strong> Some models allow faster access. Example: Hierarchical models allow quick traversal if the path is known. Relational models may require searching multiple tables.</p>
@@ -87,7 +90,7 @@
             <p><strong>Level of complexity in implementation:</strong> How difficult it is to build and maintain the database. Example: Hierarchical models are simpler but less flexible. Relational models are more complex but highly versatile.</p>
         </ul>
 
-        <h3 class="sub-heading">6.10.3 Understand the benefits and drawbacks of different data models and make judgements about the suitability of data models based on efficiency and complexity</h3>
+        <h3 class="sub-heading" id="6.10.3">6.10.3 Understand the benefits and drawbacks of different data models and make judgements about the suitability of data models based on efficiency and complexity</h3>
 
         <h4>Comparison Table</h4>
         <ul>
@@ -113,7 +116,7 @@
             </ul>
         </ul>
 
-        <h3 class="sub-heading">6.10.4 Be able to draw and represent data models</h3>
+        <h3 class="sub-heading" id="6.10.4">6.10.4 Be able to draw and represent data models</h3>
 
         <h4>Hierarchical Model</h4>
         <ul>
