--- a/main/html/content-areas/CA6 - Data/subtopic/6.11-data-access-across-platforms/6.11-data-access-across-platforms.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.11-data-access-across-platforms/6.11-data-access-across-platforms.html
@@ -21,7 +21,9 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#6.11.1">6.11.1 - Understand the features, pruposes, benefits and drawbacks of accessing data across platforms and mechanisms</option>
+            <option value="#6.11.2">6.11.2 - Understand the benefits and drawbacks of methods to access data across platforms</option>
+            <option value="#6.11.3">6.11.3 - Understand the interrelationships between data access requirements and methods and make judgements about the suitability of using data access methods in digital software development</option>
         </select>
         <br>
         <input type="submit" value="Submit">
@@ -30,7 +32,7 @@
     <main>
         <h2 class="heading">Subtopic 6.11: Data Access Across Platforms</h2>
 
-        <h3 class="sub-heading">6.11.1 Understand the features, purposes, benefits and drawbacks of accessing data across platforms</h3>
+        <h3 class="top-sub-heading" id="6.11.1">6.11.1 Understand the features, purposes, benefits and drawbacks of accessing data across platforms</h3>
 
         <h4>Permissions</h4>
         <ul>
@@ -114,7 +116,7 @@
             </ul>
         </ul>
 
-        <h3 class="sub-heading">6.11.2 Benefits and Drawbacks of Methods to Access Data Across Platforms</h3>
+        <h3 class="sub-heading" id="6.11.2">6.11.2 Benefits and Drawbacks of Methods to Access Data Across Platforms</h3>
         <ul>
             <li><strong>RBAC:</strong></li>
             <ul>
@@ -143,7 +145,7 @@
             </ul>
         </ul>
 
-        <h3 class="sub-heading">6.11.3 Interrelationships Between Data Access Requirements and Methods</h3>
+        <h3 class="sub-heading" id="6.11.3">6.11.3 Interrelationships Between Data Access Requirements and Methods</h3>
         <ul>
             <p>Access requirements determine which mechanisms to implement. RBAC suits structured organizational roles, RuBAC fits dynamic access needs, and APIs are necessary for system integration.</p>
             <p>Factors to consider when judging suitability:</p>
