--- a/main/html/content-areas/CA6 - Data/subtopic/6.12-data-analysis-tools/6.12-data-analysis-tools.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.12-data-analysis-tools/6.12-data-analysis-tools.html
@@ -21,7 +21,8 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#6.12.1">6.12.1 - Know Data analysis tools and understand their purpose and when they are used</option>
+            <option value="#6.12.2">6.12.2 - Understand the interrelationships between data analysis tools and the scale of data</option>
         </select>
         <br>
         <input type="submit" value="Submit">
@@ -30,7 +31,7 @@
     <main>
         <h2 class="heading">Subtopic 6.12: Data Analysis Tools</h2>
 
-        <h3 class="sub-heading">6.12.1 Know Data Analysis Tools and Understand Their Purpose and When They Are Used</h3>
+        <h3 class="top-sub-heading" id="6.12.1">6.12.1 Know Data Analysis Tools and Understand Their Purpose and When They Are Used</h3>
 
         <h4>Storing Big Data for Analysis</h4>
         <ul>
@@ -100,7 +101,7 @@
             </ul>
         </ul>
 
-        <h3 class="sub-heading">6.12.2 Understand the Interrelationships Between Data Analysis Tools and the Scale of Data</h3>
+        <h3 class="sub-heading" id="6.12.2">6.12.2 Understand the Interrelationships Between Data Analysis Tools and the Scale of Data</h3>
         <ul>
             <p><strong>Small-Scale Data:</strong> Can be stored and analyzed using simple databases and spreadsheets; reporting tools are usually sufficient.</p>
             <p><strong>Medium-Scale Data:</strong> Requires data warehouses and more advanced reporting or simple data mining techniques.</p>
