--- a/main/html/content-areas/CA6 - Data/subtopic/6.2-methods-of-transforming-data/6.2-methods-of-transforming-data.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.2-methods-of-transforming-data/6.2-methods-of-transforming-data.html
@@ -21,7 +21,7 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#6.2.1">6.2.1 - Know and understand methods of transforming data</option>
         </select>
         <br>
         <input type="submit" value="Submit">
@@ -31,7 +31,7 @@
         <h2 class = "heading">Subtopic 6.2: Methods of Transforming Data</h2>
         <p>When working with data, it often needs to be transformed before it becomes useful. Data transformation refers to changing the structure, format, or values of data to make it easier to interpret, analyse, or process. Transformation ensures that raw data is converted into meaningful information for decision-making, problem solving, or further applications.</p>
 
-        <h3 class="sub-heading">6.2.1 Know and understand methods of transforming data:</h3>
+        <h3 class="sub-heading" id="6.2.1">6.2.1 Know and understand methods of transforming data:</h3>
 
         <h4>Manipulating</h4>
         <ul>
