--- a/main/html/content-areas/CA6 - Data/subtopic/6.3-data-taxonomy/6.3-data-taxonomy.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.3-data-taxonomy/6.3-data-taxonomy.html
@@ -21,7 +21,12 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#6.3.1">6.3.1 - Know the defenition of each category, understand its purpose, and understand that data is categorised</option>
+            <option value="#6.3.2">6.3.2 - Know the definition for structured data, understand it's purpose, and understand that quantitative data is structured</option>
+            <option value="#6.3.3">6.3.3 - Know the definition for structured data, understand it's purpose and understand that qualitative data is unstructured</option>
+            <option value="#6.3.4">6.3.4 - Know the defenition for each and understand its purpose and understand the representation of quantitive data</option>
+            <option value="#6.3.5">6.3.5 - Know and understand the properties of qualitative data</option>
+            <option value="#6.3.6">6.3.6 - Understand the interrelationships between data categories, data structures and transformation</option>
         </select>
         <br>
         <input type="submit" value="Submit">
@@ -30,7 +35,7 @@
     <main>
         <h2 class = "heading">Subtopic 6.3: Data Taxonomy</h2>
         
-        <h3 class="sub-heading">6.3.1 Understand the different categories of data, their purpose, and how they are classified as quantitative or qualitative:</h3>
+        <h3 class="top-sub-heading" id="6.3.1">6.3.1 Understand the different categories of data, their purpose, and how they are classified as quantitative or qualitative:</h3>
         <ul>
             <p><strong>Quantitative data:</strong> Data that can be measured and expressed numerically. Used for statistical analysis, calculations, and objective comparisons.</p>
             <ul>
@@ -42,7 +47,7 @@
             </ul>
         </ul>
 
-        <h3 class="sub-heading">6.3.2 Understand the definition and purpose of structured data, and why quantitative data is considered structured:</h3>
+        <h3 class="sub-heading" id="6.3.2">6.3.2 Understand the definition and purpose of structured data, and why quantitative data is considered structured:</h3>
         <ul>
             <p>Structured data is organised in a predefined format, such as tables, spreadsheets, or databases, making it easy to store, search, filter, and analyse.</p>
             <div class="example"><strong>Example:</strong> Customer records with fields for name, age, and phone number.</div>
@@ -52,7 +57,7 @@
             </ul>
         </ul>
 
-        <h3 class="sub-heading">6.3.3 Understand the definition and purpose of unstructured data, and why qualitative data is usually unstructured:</h3>
+        <h3 class="sub-heading" id="6.3.3">6.3.3 Understand the definition and purpose of unstructured data, and why qualitative data is usually unstructured:</h3>
         <ul>
             <p>Unstructured data does not follow a predefined format and often includes rich descriptive information, multimedia, or text, making it more flexible but harder to process automatically.</p>
             <div class="example"><strong>Example:</strong> Emails, photos, videos, social media posts.</div>
@@ -62,7 +67,7 @@
             </ul>
         </ul>
 
-        <h3 class="sub-heading">6.3.4 Understand the different representations of quantitative data including discrete, continuous, and categorical values:</h3>
+        <h3 class="sub-heading" id="6.3.4">6.3.4 Understand the different representations of quantitative data including discrete, continuous, and categorical values:</h3>
         <ul>
             <p><strong>Discrete values:</strong> Numerical values that can only take specific numbers.</p>
             <ul>
@@ -78,7 +83,7 @@
             </ul>
         </ul>
 
-        <h3 class="sub-heading">6.3.5 Understand the properties of qualitative data, how it is stored, retrieved, and codified into structured formats:</h3>
+        <h3 class="sub-heading" id="6.3.5">6.3.5 Understand the properties of qualitative data, how it is stored, retrieved, and codified into structured formats:</h3>
         <ul>
             <p>Qualitative data is usually treated as a single object and can be codified into structured data for analysis.</p>
             <ul>
@@ -88,7 +93,7 @@
             <div class="example"><strong>Example:</strong> Tagging images with keywords or categorising survey responses into themes.</div>
         </ul>
 
-        <h3 class="sub-heading">6.3.6 Understand the interrelationships between data categories, structures, and transformations, and evaluate their suitability in digital software development:</h3>
+        <h3 class="sub-heading" id="6.3.5">6.3.6 Understand the interrelationships between data categories, structures, and transformations, and evaluate their suitability in digital software development:</h3>
         <ul>
             <p>Quantitative data is typically structured, making it easy to process and analyse. Qualitative data is often unstructured but can be transformed into structured formats for software applications and analytics.</p>
             <ul>
