--- a/main/html/content-areas/CA6 - Data/subtopic/6.4-data-types/6.4-data-types.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.4-data-types/6.4-data-types.html
@@ -21,16 +21,19 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#6.4.1">6.4.1 - Know the defenition of common daa types and understand their purpose and when each is used</option>
+            <option value="#6.4.2">6.4.2 - Understand the interrelationships between structured data, unstructured data and data type</option>
+            <option value="#6.4.3">6.4.3 - Understand the interrelationships between data type and data transformation</option>
+            <option value="#6.4.4">6.4.4 - Be able to make judgements about the suitability of using structured data, unstructured data, data types and data transformations in digital software development</option>
         </select>
         <br>
         <input type="submit" value="Submit">
     </form>
  
     <main>
-        <h2 class = "heading">Subtopic 6.4: Data Types</h2>
+        <h2 class="heading">Subtopic 6.4: Data Types</h2>
 
-        <h3 class="sub-heading">6.4.1 Know the definition of common data types and understand their purpose and when each is used</h3>
+        <h3 class="top-sub-heading" id="6.4.1">6.4.1 Know the definition of common data types and understand their purpose and when each is used</h3>
 
         <h4>Integer</h4>
         <ul>
@@ -88,7 +91,7 @@
             <p><strong>Example:</strong> <code>profile_picture = Blob("image_data")</code></p>
         </ul>
 
-        <h3 class="sub-heading">6.4.2 Understand the interrelationships between structured data, unstructured data and data type</h3>
+        <h3 class="sub-heading" id="6.4.2">6.4.2 Understand the interrelationships between structured data, unstructured data and data type</h3>
 
         <ul>
             <p><strong>Structured data:</strong> Organized in tables, rows, and columns. Data types are strictly defined. Example: A database table with <code>name (string)</code>, <code>age (integer)</code>, <code>price (real)</code>.</p>
@@ -96,7 +99,7 @@
             <p><strong>Interrelationship:</strong> Structured data depends on clearly defined data types, while unstructured data may use strings, Blobs, or specialized formats. Proper data types help convert unstructured data into structured formats.</p>
         </ul>
 
-        <h3 class="sub-heading">6.4.3 Understand the interrelationships between data type and data transformation</h3>
+        <h3 class="sub-heading" id="6.4.3">6.4.3 Understand the interrelationships between data type and data transformation</h3>
 
         <ul>
             <p><strong>Data transformation:</strong> Process of converting data from one format or type to another.</p>
@@ -109,7 +112,7 @@
             <p>Choosing correct data types ensures accuracy, prevents errors, and optimizes storage.</p>
         </ul>
 
-        <h3 class="sub-heading">6.4.4 Be able to make judgements about the suitability of using structured data, unstructured data, data types and data transformations in digital software development</h3>
+        <h3 class="sub-heading" id="6.4.4">6.4.4 Be able to make judgements about the suitability of using structured data, unstructured data, data types and data transformations in digital software development</h3>
 
         <ul>
             <p><strong>Structured data:</strong> Suitable for banking systems, inventory management, employee databases due to predictability and consistency.</p>
