--- a/main/html/content-areas/CA6 - Data/subtopic/6.5-data-formats/6.5-data-formats.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.5-data-formats/6.5-data-formats.html
@@ -21,7 +21,8 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#6.5.1">6.5.1 - Know the defenition of common data formats and understand their purpose and when each is used</option>
+            <option value="#6.5.2">6.5.2 - Understand the interrelationships between data format and data transformation and make judgements about the suitability of using data formats in digital software development</option>
         </select>
         <br>
         <input type="submit" value="Submit">
@@ -30,7 +31,7 @@
     <main>
        <h2 class="heading">Subtopic 6.5: Data Formats</h2>
        
-        <h3 class="sub-heading">6.5.1 Know the definition of common data formats and understand their purpose and when each is used</h3>
+        <h3 class="top-sub-heading" id="6.5.1">6.5.1 Know the definition of common data formats and understand their purpose and when each is used</h3>
 
         <h4>JSON</h4>
         <ul>
@@ -109,7 +110,7 @@
             </p>
         </ul>
 
-        <h3 class="sub-heading">6.5.2 Understand the interrelationships between data format and data transformation and make judgements about the suitability of using data formats in digital software development</h3>
+        <h3 class="sub-heading" id="6.5.2">6.5.2 Understand the interrelationships between data format and data transformation and make judgements about the suitability of using data formats in digital software development</h3>
 
         <ul>
             <p><strong>Data transformation:</strong> The process of converting data from one format to another, such as JSON → CSV or XML → JSON.</p>
