--- a/main/html/content-areas/CA6 - Data/subtopic/6.7-data-dimensions-and-maintenance/6.7-data-dimensions-and-maintenance.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.7-data-dimensions-and-maintenance/6.7-data-dimensions-and-maintenance.html
@@ -21,7 +21,12 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#6.7.1">6.7.1 - Know the definitions of the six Vs (dimensions) and understand the six Vs (dimensions) of Big Data and their impact on gathering, storing, maintaining and processing</option>
+            <option value="#6.7.2">6.7.2 - Know the definition of Big Data and understand its multiple dimensions</option>
+            <option value="#6.7.3">6.7.3 - Understand the impact of each dimension on data gathering and maintenance</option>
+            <option value="#6.7.4">6.7.4 - Know the definitions of common data quality assurance methods and understand their purpose</option>
+            <option value="#6.7.5">6.7.5 - Know the factors affecting data maintenance</option>
+            <option value="#6.7.6">6.7.6 - Understand the interrelationships between data dimensions, data quality assurance methods, data maintenance and data transformation and be able to make judgements about the suitability of using data dimensions, data quality assurance methods and data maintenance in digital software development</option>
         </select>
         <br>
         <input type="submit" value="Submit">
@@ -30,7 +35,7 @@
     <main>
        <h2 class="heading">Subtopic 6.7: Data Dimensions and Maintenance</h2>
 
-        <h3 class="sub-heading">6.7.1 Know the definitions of the six Vs (dimensions) and understand their impact</h3>
+        <h3 class="top-sub-heading" id="6.7.1">6.7.1 Know the definitions of the six Vs (dimensions) and understand their impact</h3>
 
         <h4>Volume</h4>
         <ul>
@@ -68,14 +73,14 @@
             <p><strong>Impact:</strong> Helps prioritize storage and processing resources. Example: Customer purchase history analyzed for targeted marketing.</p>
         </ul>
 
-        <h3 class="sub-heading">6.7.2 Definition of Big Data and its multiple dimensions</h3>
+        <h3 class="sub-heading" id="6.7.2">6.7.2 Definition of Big Data and its multiple dimensions</h3>
         <ul>
             <p><strong>Definition:</strong> Extremely large datasets too complex for traditional tools.</p>
             <p><strong>Multiple dimensions:</strong> Includes volume, variety, velocity, variability, veracity, and value, affecting how data is collected, stored, maintained, and analyzed.</p>
             <p><strong>Example:</strong> A global e-commerce company managing millions of transactions per day across multiple platforms.</p>
         </ul>
 
-        <h3 class="sub-heading">6.7.3 Impact of each dimension on data gathering and maintenance</h3>
+        <h3 class="sub-heading" id="6.7.3">6.7.3 Impact of each dimension on data gathering and maintenance</h3>
         <ul>
             <p><strong>Volume:</strong> Requires scalable collection tools and efficient storage.</p>
             <p><strong>Variety:</strong> Needs integration of different data formats.</p>
@@ -85,7 +90,7 @@
             <p><strong>Value:</strong> Prioritizes storage and maintenance for high-value data.</p>
         </ul>
 
-        <h3 class="sub-heading">6.7.4 Data quality assurance methods and their purpose</h3>
+        <h3 class="sub-heading" id="6.7.4">6.7.4 Data quality assurance methods and their purpose</h3>
 
         <h4>Validation</h4>
         <ul>
@@ -123,14 +128,14 @@
             <p><strong>Purpose:</strong> Protects against data loss. Example: Cloud backups and mirrored servers.</p>
         </ul>
 
-        <h3 class="sub-heading">6.7.5 Factors affecting data maintenance</h3>
+        <h3 class="sub-heading" id="6.7.5">6.7.5 Factors affecting data maintenance</h3>
         <ul>
             <p><strong>Time:</strong> Data can become obsolete; frequent updates are necessary. Example: Financial reports must be current.</p>
             <p><strong>Skills:</strong> Trained personnel are needed for maintenance and quality assurance. Example: Data engineers and analysts.</p>
             <p><strong>Cost:</strong> Storage, backup, and cleaning incur expenses. Example: Cloud storage and real-time processing pipelines.</p>
         </ul>
 
-        <h3 class="sub-heading">6.7.6 Interrelationships and judgements in digital software development</h3>
+        <h3 class="sub-heading" id="6.7.6">6.7.6 Interrelationships and judgements in digital software development</h3>
         <ul>
             <p><strong>Interrelationships:</strong> Volume requires automation; velocity demands real-time verification; variety impacts consistency and integrity; veracity drives validation and reliability; value prioritizes important datasets.</p>
             <p><strong>Judgements:</strong> Decide which datasets are worth maintaining based on value and veracity, determine quality assurance levels, balance costs, time, and skills. Example: Only reliable and relevant customer data is maintained for a recommendation engine.</p>
