--- a/main/html/content-areas/CA6 - Data/subtopic/6.8-data-systems/6.8-data-systems.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.8-data-systems/6.8-data-systems.html
@@ -21,7 +21,14 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#6.8.1">6.8.1 - Know the definition of data wrangling and understand its purpose and when it is used</option>
+            <option value="#6.8.2">6.8.2 - Know and understand the purpose of each step of data wrangling</option>
+            <option value="#6.8.3">6.8.3 - Know and understand the purpose of each core function of a data system</option>
+            <option value="#6.8.4">6.8.4 - Know the types of data entry errors and understand how and why they occur</option>
+            <option value="#6.8.5">6.8.5 - Know and understand methods to avoid data entry errors</option>
+            <option value="#6.8.6">6.8.6 - Know and understand the factors that affect data entry errors</option>
+            <option value="#6.8.7">6.8.7 - Understand the interrelationships between data wrangling, data systems, data entry errors and methods to avoid data entry errors and be able to make judgements about the suitability of using data wrangling, data systems, data entry error methods in digital software development</option>
+            <option value="#6.8.8">6.8.8 - Understand the interrelationships between data systems, data entry errors, methods to avoid data entry errors and factors that affect data entry errors and be able to make judgements about the suitability of using data systems, data entry error methods and factors that affect data entry errors in digital software development</option>
         </select>
         <br>
         <input type="submit" value="Submit">
@@ -30,7 +37,7 @@
     <main>
         <h2 class="heading">Subtopic 6.8: Data Systems</h2>
 
-        <h3 class="sub-heading">6.8.1 Know the definition of data wrangling and understand its purpose and when it is used</h3>
+        <h3 class="top-sub-heading" id="6.8.1">6.8.1 Know the definition of data wrangling and understand its purpose and when it is used</h3>
         <ul>
             <p><strong>Definition:</strong> Data wrangling, or data munging, is the process of cleaning, transforming, and preparing raw data so that it is in a usable format for analysis or reporting.</p>
             <p><strong>Purpose:</strong> Ensures data quality, usability, and reliability for analysis, reporting, and decision-making.</p>
@@ -38,7 +45,7 @@
             <p><strong>Example:</strong> Standardizing sales data from multiple stores that may have inconsistent formats such as "$100" vs "100 USD".</p>
         </ul>
 
-        <h3 class="sub-heading">6.8.2 Know and understand the purpose of each step of data wrangling</h3>
+        <h3 class="sub-heading" id="6.8.2">6.8.2 Know and understand the purpose of each step of data wrangling</h3>
         <h4>Structure</h4>
         <ul>
             <p>Organize data into logical formats like tables or databases to make it easier to work with and analyze.</p>
@@ -65,7 +72,7 @@
             <p>Example: Preparing a dataset for sales analysis in Excel or for feeding into a machine learning model.</p>
         </ul>
 
-        <h3 class="sub-heading">6.8.3 Know and understand the purpose of each core function of a data system</h3>
+        <h3 class="sub-heading" id="6.8.3">6.8.3 Know and understand the purpose of each core function of a data system</h3>
         <h4>Input</h4>
         <ul>
             <p>Capturing data from users, sensors, or other systems. Accuracy here impacts the entire system.</p>
@@ -101,7 +108,7 @@
             <p>Example: Adjusting input rules after detecting frequent data entry errors.</p>
         </ul>
 
-        <h3 class="sub-heading">6.8.4 Know the types of data entry errors and understand how and why they occur</h3>
+        <h3 class="sub-heading" id="6.8.4">6.8.4 Know the types of data entry errors and understand how and why they occur</h3>
         <h4>Transcription Errors</h4>
         <ul>
             <p>Typing mistakes when transferring data from one source to another, caused by fatigue or distraction.</p>
@@ -113,7 +120,7 @@
             <p>Example: Entering “57” instead of “75”.</p>
         </ul>
 
-        <h3 class="sub-heading">6.8.5 Know and understand methods to avoid data entry errors</h3>
+        <h3 class="sub-heading" id="6.8.5">6.8.5 Know and understand methods to avoid data entry errors</h3>
         <ul>
             <li><strong>Validation of user input:</strong> System checks input against rules to prevent incorrect entries.</li>
             <li><strong>Verification by double entry:</strong> Entering data twice and comparing to detect errors.</li>
@@ -121,21 +128,21 @@
             <li><strong>Pre-filled data entry boxes:</strong> Auto-populated fields reduce manual entry.</li>
         </ul>
 
-        <h3 class="sub-heading">6.8.6 Know and understand the factors that impact data entry</h3>
+        <h3 class="sub-heading" id="6.8.6">6.8.6 Know and understand the factors that impact data entry</h3>
         <ul>
             <p><strong>Time needed to create screens:</strong> Longer design time can impact overall project schedules.</p>
             <p><strong>Expertise needed to create screens:</strong> Skilled personnel ensure effective and user-friendly forms.</p>
             <p><strong>Time needed to enter the data:</strong> Longer entry times can lead to fatigue and errors.</p>
         </ul>
 
-        <h3 class="sub-heading">6.8.7 Understand the relationship between factors that impact data entry and data quality and make judgements about the suitability of methods to reduce data entry errors in digital software development</h3>
+        <h3 class="sub-heading" id="6.8.7">6.8.7 Understand the relationship between factors that impact data entry and data quality and make judgements about the suitability of methods to reduce data entry errors in digital software development</h3>
         <ul>
             <p>Poorly designed screens or rushed data entry reduce data quality.</p>
             <p>Methods like drop-down menus, pre-filled fields, and validation improve accuracy.</p>
             <p>Double-entry verification is suitable for high-risk or critical data.</p>
         </ul>
 
-        <h3 class="sub-heading">6.8.8 Understand the relationship between factors that impact implementation of data entry and make judgements about the suitability of implementing data entry in digital software development</h3>
+        <h3 class="sub-heading" id="6.8.8">6.8.8 Understand the relationship between factors that impact implementation of data entry and make judgements about the suitability of implementing data entry in digital software development</h3>
         <ul>
             <p>Implementation factors include development time, complexity, and expertise required.</p>
             <p>Simple data entry forms are easier to implement, while complex validation improves accuracy but requires more resources.</p>
