--- a/main/html/content-areas/CA6 - Data/subtopic/6.9-data-visualisation/6.9-data-visualisation.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.9-data-visualisation/6.9-data-visualisation.html
@@ -21,7 +21,8 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#6.9.1">6.9.1 - Know and understand data visualisation formats and when they are used</option>
+            <option value="#6.9.2">6.9.2 - Understand the purpose of data visualisation</option>
         </select>
         <br>
         <input type="submit" value="Submit">
@@ -30,7 +31,7 @@
     <main>
         <h2 class="heading">Subtopic 6.9: Data Visualisation</h2>
 
-        <h3 class="sub-heading">6.9.1 Know and understand data visualisation formats and when they are used</h3>
+        <h3 class="top-sub-heading" id="6.9.1">6.9.1 Know and understand data visualisation formats and when they are used</h3>
 
         <h4>Graphs</h4>
         <ul>
@@ -100,7 +101,7 @@
             </ul>
         </ul>
 
-        <h3 class="sub-heading">6.9.2 Know and understand the benefits and drawbacks of data visualisation formats based on:</h3>
+        <h3 class="sub-heading" id="6.9.2">6.9.2 Know and understand the benefits and drawbacks of data visualisation formats based on:</h3>
 
         <h4>Type of Data</h4>
         <ul>
