--- a/main/html/content-areas/CA6 - Data/subtopic/6.6-structures-for-storing-data/6.6-structures-for-storing-data.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.6-structures-for-storing-data/6.6-structures-for-storing-data.html
@@ -21,7 +21,10 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#6.6.1">6.6.1 - Understand the role of metadata in providing descriptions and context for data</option>
+            <option value="#6.6.2">6.6.2 - Know the definition of file-based and directory-based structures and understand their purposes and when they are used</option>
+            <option value="#6.6.3">6.6.3 - Know the definition of hierarchy-based structure and understand its purpose and when it is used</option>
+            <option value="#6.6.4">6.6.4 - Understand the interrelationships between storage structures and data transformation</option>
         </select>
         <br>
         <input type="submit" value="Submit">
@@ -30,7 +33,7 @@
     <main>
       <h2 class="heading">Subtopic 6.6: Structures for storing data</h2>
 
-        <h3 class="sub-heading">6.6.1 Understand the role of metadata in providing descriptions and contexts for data</h3>
+        <h3 class="top-sub-heading" id="6.6.1">6.6.1 Understand the role of metadata in providing descriptions and contexts for data</h3>
 
         <h4>Definition and Purpose</h4>
         <ul>
@@ -50,7 +53,7 @@
         <h4>Real-world Example</h4>
         <p>A digital photograph may include metadata such as camera settings (ISO, aperture, shutter speed), GPS location, date and time, and photographer’s name, making it easier to catalog, search, and edit.</p>
 
-        <h3 class="sub-heading">6.6.2 Know the definition of file-based and directory-based structures and understand their purposes and when they are used</h3>
+        <h3 class="sub-heading" id="6.6.2">6.6.2 Know the definition of file-based and directory-based structures and understand their purposes and when they are used</h3>
 
         <h4>File-based Structure</h4>
         <ul>
@@ -85,7 +88,7 @@
             <li>File-based storage is flexible and simple but can become hard to manage with many files.</li>
         </ul>
 
-        <h3 class="sub-heading">6.6.3 Know the definition of hierarchy-based structure and understand its purpose and when it is used</h3>
+        <h3 class="sub-heading" id="6.6.3">6.6.3 Know the definition of hierarchy-based structure and understand its purpose and when it is used</h3>
 
         <h4>Definition</h4>
         <p>A hierarchy-based structure organizes data in a tree-like format where each parent node can have multiple child nodes.</p>
@@ -122,7 +125,7 @@
             <li><strong>Hierarchy-based:</strong> Tree-like, complex, suitable for complex relationships.</li>
         </ul>
 
-        <h3 class="sub-heading">6.6.4 Understand the interrelationships between storage structures and data transformation</h3>
+        <h3 class="sub-heading" id="6.6.4">6.6.4 Understand the interrelationships between storage structures and data transformation</h3>
 
         <h4>Definition</h4>
         <p>Data transformation is the process of converting data from one format or structure to another for easier analysis, storage, or compatibility.</p>
